objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Parked_At__c</fullName>
        <label>Parked At</label>
        <picklist>
            <picklistValues>
                <fullName>125 W Center St. Promenade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 Littlefield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>202 Littlefield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>222 Littlefield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>274 Wattis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>601 Santa Monica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>901 South Airport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parking_Lot_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parking Lot</label>
        <referenceTo>Parking_Lot__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payoff_Authorization_Content_ID__c</fullName>
        <label>Payoff Authorization Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Authorization_URL__c</fullName>
        <formula>IF(ISBLANK(Payoff_Authorization_Content_ID__c), Seller_Opportunity_ID__r.Is_Attached_Authorization_For_Payoff__c, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Payoff_Authorization_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payoff Authorization URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photograph_Car_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photograph Car Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photos_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photos Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Of_Attorney_Content_ID__c</fullName>
        <label>Power Of Attorney Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preserve_After_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this object should not be wiped as part of the migration.</description>
        <label>Preserve After Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Drop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Props_Base_Deal_URL__c</fullName>
        <description>URL of this vehicle in Base (used by Props)</description>
        <label>Props Base Deal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Purchased_Vehicle_Order_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchased Vehicle Order ID</label>
        <referenceTo>Vehicle_Order__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RBook_Average_Adjusted__c</fullName>
        <label>RBook Average Adjusted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recalls__c</fullName>
        <label>Recalls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Content_ID__c</fullName>
        <label>Registration Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Expiration__c</fullName>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_State__c</fullName>
        <label>Registration State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_Pending__c</fullName>
        <formula>OR( 
On_Deposit__c = True, 
Going_To_Auction__c = True,
Hold_For_Financing__c = True,
Hold_For_Trade_In__c = True 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller_Bill_Of_Sale_URL__c</fullName>
        <formula>IF(ISBLANK(Bill_Of_Sale_Content_ID__c),  Seller_Opportunity_ID__r.Is_Attached_Seller_Signed_262_Form__c, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Bill_Of_Sale_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Bill Of Sale URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value is not a seller opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>equals</operation>
                <value>Seller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Power_Of_Attorney_URL__c</fullName>
        <formula>IF(ISBLANK(Power_Of_Attorney_Content_ID__c), &quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Power_Of_Attorney_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Power Of Attorney URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Proof_Of_Insurance_Content_ID__c</fullName>
        <label>Seller Proof Of Insurance Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Proof_Of_Insurance_URL__c</fullName>
        <formula>IF(ISBLANK(Seller_Proof_Of_Insurance_Content_ID__c),  Seller_Opportunity_ID__r.Is_Attached_Seller_Insurance__c, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Seller_Proof_Of_Insurance_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Proof Of Insurance URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Registration_URL__c</fullName>
        <formula>IF(ISBLANK(Registration_Content_ID__c),  Seller_Opportunity_ID__r.Is_Attached_Seller_Vehicle_Registration__c, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Registration_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Registration URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Stage__c</fullName>
        <formula>TEXT(Seller_Opportunity_ID__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Summary__c</fullName>
        <label>Seller Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seller_Title__c</fullName>
        <label>Seller Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Fee_Override__c</fullName>
        <label>Service Fee Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <formula>BLANKVALUE(
  Service_Fee_Override__c, 
  IF(
    ISBLANK(List_Price__c) || List_Price__c &lt;= 15000.00,
    195,
    IF(
      List_Price__c &lt;= 30000.00,
      295,
      395
    )
  )
)</formula>
        <label>Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sirius_Activation_Code__c</fullName>
        <label>Sirius Activation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sirius_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sirius Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smog_Check_On__c</fullName>
        <label>Smog Check On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Smog_Inspection_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smog Inspection Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Content_ID__c</fullName>
        <label>Title_Content_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_URL__c</fullName>
        <formula>IF(ISBLANK(Title_Content_ID__c), Seller_Opportunity_ID__r.Is_Attached_Certificate_Of_Title__c, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Title_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Features__c</fullName>
        <label>Top Features</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <label>Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trim_Detail__c</fullName>
        <label>Trim Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <label>Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>True_Car_Listing_URL__c</fullName>
        <label>True Car Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VIN_Verification_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vehicles with an out of state License Plate being sold in California require a VIN Verification check before they can be registered.</inlineHelpText>
        <label>VIN Verification Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <externalId>true</externalId>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Type__c</fullName>
        <label>Warranty Type</label>
        <picklist>
            <picklistValues>
                <fullName>Aftermarket Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer Extended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>Cars_Hold_for_Sale</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6 AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ship_Date__c</columns>
        <columns>Hold_For_Financing__c</columns>
        <columns>Hold_For_Trade_In__c</columns>
        <columns>Going_To_Auction__c</columns>
        <columns>On_Deposit__c</columns>
        <columns>In_Transit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold_For_Financing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Hold_For_Trade_In__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Going_To_Auction__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>On_Deposit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>In_Transit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_ID__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Sold Cars Held In Inventory - SF</label>
    </listViews>
    <listViews>
        <fullName>Deposits_DC</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>startsWith</operation>
            <value>Wash</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <filters>
            <field>On_Deposit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Deposits DC</label>
    </listViews>
    <listViews>
        <fullName>Deposits_LA</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <filters>
            <field>On_Deposit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Deposits LA</label>
    </listViews>
    <listViews>
        <fullName>Deposits_SF</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <filters>
            <field>On_Deposit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Deposits SF</label>
    </listViews>
    <listViews>
        <fullName>Going_To_Auction</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Going_To_Auction__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_ID__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Going To Auction - SF</label>
    </listViews>
    <listViews>
        <fullName>Going_To_Auction_LA</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Going_To_Auction__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Going To Auction - LA</label>
    </listViews>
    <listViews>
        <fullName>Handover_DC</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>startsWith</operation>
            <value>Wash</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Handover</value>
        </filters>
        <label>Handover DC</label>
    </listViews>
    <listViews>
        <fullName>Handover_LA</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Handover</value>
        </filters>
        <label>Handover LA</label>
    </listViews>
    <listViews>
        <fullName>Handover_SF</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Handover</value>
        </filters>
        <label>Handover SF</label>
    </listViews>
    <listViews>
        <fullName>Hold_For_Trade_In</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold_For_Trade_In__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Hold For Trade-In - SF</label>
    </listViews>
    <listViews>
        <fullName>Hold_For_Trade_In_DC</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold_For_Trade_In__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>startsWith</operation>
            <value>Wash</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Hold For Trade-In - DC</label>
    </listViews>
    <listViews>
        <fullName>Hold_For_Trade_In_LA</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold_For_Trade_In__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Hold For Trade-In - LA</label>
    </listViews>
    <listViews>
        <fullName>Hold_for_Financing</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold_For_Financing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Hold for Financing - SF</label>
    </listViews>
    <listViews>
        <fullName>Hold_for_Financing_DC</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold_For_Financing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>startsWith</operation>
            <value>Wash</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Hold for Financing - DC</label>
    </listViews>
    <listViews>
        <fullName>Hold_for_Financing_LA</fullName>
        <columns>NAME</columns>
        <columns>Exterior_Color__c</columns>
        <columns>Mileage__c</columns>
        <columns>List_Price__c</columns>
        <columns>Seller_Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold_For_Financing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Listing_Region_Name__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <filters>
            <field>Seller_Stage__c</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>Hold for Financing - LA</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>